pipeline/deploy/deployment-core.yaml
# deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helios-v3-core-api
  namespace: helios-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helios-v3-core-api
  template:
    metadata:
      labels:
        app: helios-v3-core-api
    spec:
      containers:
      - name: helios-v3-core-api
        image:  medcase.azurecr.io/helios/helios-core:v306
        ports:
        - containerPort: 443
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helios-v3-core-api
  namespace: helios-testing
spec:
  selector:
    app: helios-v3-core-api
  ports:
  - port: 443
    name: tcp-443
    targetPort: 443
  - port: 80
    name: tcp-80
    targetPort: 80
